<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">







        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"

            android:paddingBottom="0dp">

            <!-- Profile Content -->
            <RelativeLayout
                android:id="@+id/profileContent"
                android:layout_width="0dp"
                android:layout_height="50dp"
                android:layout_marginBottom="24dp"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent">

                <!-- Top Bar -->
                <ImageView
                    android:id="@+id/ivBackButton"
                    android:layout_width="50dp"
                    android:layout_height="match_parent"
                    android:layout_alignParentStart="true"
                    android:layout_centerVertical="true"
                    android:src="@drawable/ic_left_arrow" />

                <!-- Username -->

            </RelativeLayout>

            <!-- Profile Image -->
            <de.hdodenhof.circleimageview.CircleImageView
                android:id="@+id/ivProfileImage"
                android:layout_width="120dp"
                android:layout_height="120dp"
                android:layout_marginBottom="24dp"
                android:layout_marginTop="16dp"
                android:src="@drawable/mock_profile"
                app:civ_border_color="#FF000000"
                app:civ_border_width="2dp"
                app:layout_constraintTop_toBottomOf="@+id/profileContent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent" />

            <!-- User Stats Section with Background -->
            <LinearLayout
                android:id="@+id/userStats"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/second_green_rounded_square"
                android:orientation="horizontal"
                android:padding="16dp"
                app:layout_constraintTop_toBottomOf="@+id/ivProfileImage"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                android:layout_marginTop="16dp">

                <!-- User Stats TextViews -->
                <TextView
                    android:id="@+id/tvWeight"
                    android:layout_width="100dp"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:text="Cân nặng\n70 kg"
                    android:textAlignment="center" />

                <TextView
                    android:id="@+id/tvAge"
                    android:layout_width="100dp"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:text="Tuổi\n25"
                    android:textAlignment="center" />

                <TextView
                    android:id="@+id/tvHeight"
                    android:layout_width="100dp"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:text="Chiều cao\n175 cm"
                    android:textAlignment="center" />
            </LinearLayout>

        </androidx.constraintlayout.widget.ConstraintLayout>



        <!-- Profile Detailds -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="16dp">

            <!-- Name Field -->
            <TextView
                android:id="@+id/tvName"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/title_fullname"
                android:textSize="16sp"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/etName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="Điền tên"
                android:inputType="textPersonName"
                android:background="@android:color/transparent" />

            <!-- Email Field -->
            <TextView
                android:id="@+id/tvEmail"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/email"
                android:textSize="16sp"
                android:textStyle="bold"
                android:layout_marginTop="16dp" />

            <EditText
                android:id="@+id/etEmail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="Điền email"
                android:inputType="textEmailAddress"
                android:background="@android:color/transparent" />

            <!-- Phone Field -->
            <TextView
                android:id="@+id/tvPhone"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/title_phone_number"
                android:textSize="16sp"
                android:textStyle="bold"
                android:layout_marginTop="16dp" />

            <EditText
                android:id="@+id/etPhone"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="Điền số điện thoại của bạn"
                android:inputType="phone"
                android:background="@android:color/transparent" />

            <!-- Date of Birth Field -->
            <TextView
                android:id="@+id/tvDob"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/title_dob"
                android:textSize="16sp"
                android:textStyle="bold"
                android:layout_marginTop="16dp" />

            <EditText
                android:id="@+id/etDob"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="DD/MM/YYYY"
                android:inputType="date"
                android:background="@android:color/transparent" />

            <!-- Weight Field -->
            <TextView
                android:id="@+id/tvWeight2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/title_weight"
                android:textSize="16sp"
                android:textStyle="bold"
                android:layout_marginTop="16dp" />

            <EditText
                android:id="@+id/etWeight"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="Điền cân nặng của bạn (kg)"
                android:inputType="numberDecimal"
                android:background="@android:color/transparent" />

            <!-- Height Field -->
            <TextView
                android:id="@+id/tvHeight2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/title_height"
                android:textSize="16sp"
                android:textStyle="bold"
                android:layout_marginTop="16dp" />

            <EditText
                android:id="@+id/etHeight"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="Điền chiều cao của bn(cm)"
                android:inputType="numberDecimal"
                android:background="@android:color/transparent" />

            <!-- Update Button -->
            <com.google.android.material.button.MaterialButton
                android:id="@+id/btnUpdateProfile"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Update Profile"
                style="@style/GreenRoundedButton"
                android:layout_gravity="center"
                android:layout_marginTop="24dp" />


        </LinearLayout>



    </LinearLayout>

</androidx.core.widget.NestedScrollView>